index.css
/* ... */
.pane .pane-overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

@media (max-width: 1028px) {
    .game-wrapper {
        width: 100%;
    }
}

.pane {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
    height: calc(100% - 64px);
    width: 100%;
    transform-origin: top;
}

.pane h1,
h2,
h3,
h4,
h5 {
    color: var(--text-color);
}

.pane > .footer {
    color: var(--text-color);
    text-align: center;
}

button {
    border: none;
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

button.close {
    z-index: 1;
    width: 2.5rem;
    height: 2.5rem;
    background-color: rgba(0, 0, 0, 0);
    color: var(--text-color);
}

button.button {
    padding: 0.5em 0.5em 0.5em 0.5em;
    margin: 0.5em 0em 0.5em 0em;
    border-radius: 8em;
    background-color: var(--correct-color);
}

button.button > * {
    color: var(--letter-selected-inverted-text-color);
    font-weight: bold;
}

/* Settings */

.settings {
    position: relative;
}

.settings > button.close {
    position: absolute;
    top: 0;
    right: 0;
}

.settings > .settings-item-group {
    width: 100%;
}

.settings .settings-item {
    color: var(--text-color);
    display: flex;
    width: 100%;
    justify-content: space-around;
    align-items: center;
    border-top: var(--settings-item-border-color);
    border-bottom: none;
    height: 2em;
}

.settings .settings-item:last-child {
    border-bottom: var(--settings-item-border-color);
}

.settings .settings-item > * {
    pointer-events: none;
}

.settings .settings-item a {
    text-decoration: none;
}

.settings .settings-item .settings-item-column {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: baseline;
    gap: 0.5em;
}

.settings .settings-item .settings-item-column:last-child {
    width: 60%;
}

.settings .settings-item .settings-item-column > .toggle {
    text-transform: capitalize;
}

/* Overlay Backdrop */

.overlay-back {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: none;
    z-index: 100;
}

/* Dialog Window */

.dialog {
    position: fixed;
    top: 50%;
    left: 50%;
    right: 0;
    bottom: 0;
    z-index: 101;
    transform: translate(-50%, -50%);

    background-color: var(--dialog-background-color);
    color: var(--text-color);
    border: 1px solid black;
    width: 300px;
    height: auto;
    margin: 0;

    opacity: 1;

    transition:
        top 0.5s,
        opacity 0.5s;
}

@media (max-width: 320px) {
    .dialog {
        width: 250px;
    }
}

.dialog > div.dialog-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 2rem;
    box-sizing: border-box;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    overflow: auto;
}

.dialog > div.dialog-content > div.dialog-text {
    height: 100%;
    position: relative;
}

.dialog > div.dialog-content > div.dialog-text > ul > li {
    margin-bottom: 8px;
}

.dialog > div.dialog-content > div.dialog-text > ul > li:last-child {
    margin-bottom: 0;
}

.dialog > div.dialog-content > div.dialog-text > *:last-child {
    padding: 0 0 16px 0;
}

.dialog > div.dialog-content > span {
    margin: 8px 0;
}

.dialog > div.dialog-content > .next-wordle {
    margin: 8px 0;
}

.dialog button > span {
    margin-left: 8px;
}

.dialog button.close {
    position: absolute;
    top: 0;
    right: 0;
}

/* Specific Dialogs */

.dialog > .dialog-content > .how-to-play {
    height: 100%;
    position: relative;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content {
    padding: 0 0 8px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > h2 {
    text-transform: uppercase;
    margin: 12px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content div.sample {
    display: flex;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning {
    margin: 12px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning > div.sample {
    margin: 4px 0;
}

.dialog > .dialog-content > .how-to-play > .how-to-play-content > div.meaning > span.text {
    line-height: 1.25;
    font-size: 0.75em;
}

/* Notification */

.notification-area {
    position: fixed;
    top: 10%;
    left: 50%;
    z-index: 102;
    transform: translate(-50%, 0);

    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
    width: 60%;
}

.notification-area > .notification {
    background-color: var(--notification-background-color);
    border: 1px solid var(--notification-background-color);
    border-radius: 0.25rem;
    margin: 0.2rem;

    /* Need to inherit z-index from parent, otherwise they won't appear on top of dialogs in iOS Safari */
    z-index: inherit;

    text-align: center;

    opacity: 1;
    transition: opacity 0.25s;
}

.notification-area > .notification > .notification-content {
    padding: 1rem 1.5rem;
    font-weight: bold;
    color: var(--notification-text-color);
}

/* Landscape Overlay */

#landscape-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--background-color);
    text-align: center;
    font-size: 24px;
    color: var(--text-color);
    z-index: 9999;
}

#landscape-overlay > .overlay-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

#landscape-overlay > .overlay-content > img {
    height: 100px;
}

/* Text Content */

a {
    color: var(--text-color);
}
/* ... */

